# AndroidFFmpegDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/matt/androidffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/matt/androidffmpegdemo/: AVRecorderActivity.java  AudioRecorderActivity.java  AudioVisualMediaPlayerActivity.java  CommonUtils.java  EGLPlayerActivity.kt  FFEncodeActivity.kt  FFMediaCodecPlayerActivity.java  FFRepackActivity.kt  FFmpegActivity.kt  FFmpegGLPlayerActivity.kt  FFmpegPlayerActivity.kt  GLMediaPlayerActivity.java  MainActivity.kt  MainApp.kt  MultiOpenGLPlayerActivity.kt  MyFileProvider.java  NativeMediaPlayerActivity.kt  OpenGLPlayerActivity.kt  SimplePlayerActivity.kt  SimpleRenderActivity.kt  SoulPlayerActivity.kt  StreamMediaPlayerActivity.java  SynthesizerActivity.kt  VRMediaPlayerActivity.java  VideoRecorderActivity.java
app/src/main/java/com/matt/androidffmpegdemo/adapter/: MyRecyclerViewAdapter.kt
app/src/main/java/com/matt/androidffmpegdemo/test/: EGLPlayerActivity.kt  MainActivity.kt  MainApp.kt  MultiOpenGLPlayerActivity.kt  NativeMediaPlayerActivity.kt  OpenGLPlayerActivity.kt  SimplePlayerActivity.kt  SoulPlayerActivity.kt
app/src/main/java/com/matt/androidffmpegdemo/util/: CommonUtils.java
app/src/main/java/com/matt/androidffmpegdemo/view/: CaptureButton.java  CaptureLayout.java  CaptureListener.java  ClickListener.java  MyGestureListener.java  RecordedButton.java  ReturnButton.java  ReturnListener.java  TypeButton.java  TypeListener.java
app/src/main/res/layout/: activity_audio_recorder.xml  activity_audio_visual_media_player.xml  activity_camera.xml  activity_egl_player.xml  activity_ff_gl_player.xml  activity_ff_repack.xml  activity_gl_media_player.xml  activity_main.xml  activity_media_player.xml  activity_native_media_player.xml  activity_opengl_player.xml  activity_simple_player.xml  activity_simpler_render.xml  content_main.xml  resolution_selected_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/matt/androidffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/com/matt/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  ffmpeglib.cpp  nativelib.cpp
nativelib/src/main/cpp/include/libavformat/: avformat.h
nativelib/src/main/cpp/player/: FFMediaPlayer.h
nativelib/src/main/cpp/player/decoder/: DecoderBase.h
nativelib/src/main/cpp/recorder/: MediaRecorder.cpp  MediaRecorder.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
nativelib/src/main/java/com/matt/nativelib/: MediaPlayer.java  NativeLib.kt  Player.kt  PlayerManager.kt
nativelib/src/main/java/com/matt/nativelib/ffmpeg/: FFMediaPlayer.kt
nativelib/src/main/java/com/matt/nativelib/media/: Frame.kt  MP4Repack.kt  Player.kt
nativelib/src/main/java/com/matt/nativelib/media/decoder/: AudioDecoder.kt  BaseDecoder.kt  DecodeState.kt  IDecoderStateListener.kt  VideoDecoder.kt
nativelib/src/main/java/com/matt/nativelib/media/encoder/: AudioEncoder.kt  BaseEncoder.kt  IEncodeStateListener.kt  VideoEncoder.kt
nativelib/src/main/java/com/matt/nativelib/media/extractor/: AudioExtractor.kt  IExtractor.kt  MMExtractor.kt  VideoExtractor.kt
nativelib/src/main/java/com/matt/nativelib/media/muxer/: MMuxer.kt  MP4Repack.kt
nativelib/src/main/java/com/matt/nativelib/media/render/: AudioRender.kt  BaseRender.kt  DefGLSurfaceView.kt  IAudioRender.kt  IVideoRender.kt  MultiGLRender.kt  OpenGLTools.kt  OpenGlRender.kt  SimpleGLRender.kt  SoulVideoDrawer.kt  VideoRender.kt
nativelib/src/main/java/com/matt/nativelib/opengl/: DefGLSurfaceView.kt  OpenGLManager.kt  OpenGLTools.kt  SimpleRender.kt
nativelib/src/main/java/com/matt/nativelib/opengl/drawer/: ADrawer.kt  IDrawer.kt  SoulVideoDrawer.kt  VideoDrawer.kt
nativelib/src/main/java/com/matt/nativelib/opengl/egl/: CustomerGLRenderer.kt  EGLCore.kt  EGLSurfaceHolder.kt
nativelib/src/main/java/com/matt/nativelib/opengl/render/: IVideoRender.kt  SoulVideoDrawer.kt  VideoRender.kt
nativelib/src/main/java/com/matt/nativelib/recorder/: AudioRecorder.kt  FFMediaRecorder.kt  MediaRecorderContext.kt
nativelib/src/main/java/com/matt/nativelib/recorder/camera/: Camera2FrameCallback.kt  Camera2Wrapper.kt  CameraUtil.kt
nativelib/src/main/java/com/matt/nativelib/view/: MyGLSurfaceView.kt  MySurfaceView.kt
nativelib/src/main/java/com/matt/nativelib/widget/: MySurfaceView.kt
nativelib/src/test/java/com/matt/nativelib/: ExampleUnitTest.kt
videolibrary/: build.gradle
videolibrary/src/androidTest/java/com/matt/videolibrary/: ExampleInstrumentedTest.kt
videolibrary/src/main/: AndroidManifest.xml
videolibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
videolibrary/src/main/cpp/ffmpeg/include/util/: LogUtil.h
videolibrary/src/main/cpp/media/decoder/: base_decoder.cpp
videolibrary/src/main/cpp/media/decoder/audio/: a_decoder.cpp
videolibrary/src/main/cpp/media/encoder/: base_encoder.cpp
videolibrary/src/main/cpp/media/render/audio/: opensl_render.cpp
videolibrary/src/main/java/com/matt/videolibrary/ffmpeg/: MediaPlayer.kt
videolibrary/src/main/java/com/matt/videolibrary/media/: DecodeState.kt  Frame.kt  IDecoder.kt  IDecorderProgress.kt  IExtractor.kt
videolibrary/src/main/java/com/matt/videolibrary/media/decoder/: AudioDecoder.kt  BaseDecoder.kt  DefDecodeStateListener.kt  IDecoderStateListener.kt  VideoDecoder.kt
videolibrary/src/main/java/com/matt/videolibrary/media/encoder/: AudioEncoder.kt  BaseEncoder.kt  DefEncodeStateListener.kt  IEncodeStateListener.kt  VideoEncoder.kt
videolibrary/src/main/java/com/matt/videolibrary/media/extractor/: AudioExtractor.kt  MMExtractor.kt  VideoExtractor.kt
videolibrary/src/main/java/com/matt/videolibrary/opengl/: DefGLSurfaceView.kt  OpenGLTools.kt  SimpleRender.kt
videolibrary/src/test/java/com/matt/videolibrary/: ExampleUnitTest.kt
(+12 files in other folders)
